feat(person-contact): sample intercom between microservices - WIP
